--- a/CFlashcards/wwwroot/css/style.css
+++ b/CFlashcards/wwwroot/css/style.css
@@ -1,20 +1,12 @@
+@media (min-width: 768px) {
+    html {
+        font-size: 14px;
+    }
 
-﻿/** {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+    .search-bar {
+        padding: 60px 5vw;
+    }
 }
-body {
-    width: 100%;
-    min-height: 100vh;
-    background-color: var(--bg-color);
-    padding:0 3rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    
-}
-*/
 
 /* Base button styles */
 .btn.btn-secondary {
@@ -35,36 +27,40 @@ body {
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     }
 
-    .container {
-        width: 100%;
-    }
-
-    .search-bar {
-        width: 100%;
-        padding: 0 2%;
-    }
+.search-bar {
+    /*width: 100%;
+    padding: 0 2%;*/
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-content: space-around;
+    justify-content: space-between;
+    align-items: flex-start;
+    min-height: 200px;
+    padding: 30px;
+}
 
         .search-bar input[type="text"] {
             padding: 0.7rem;
             border: 1px solid lightgray;
             border-radius: 0.25rem;
             font-size: 1rem;
-            width: 25%;
+            width: 80%;
         }
 
-    .search-bar button {
-        border-radius: 0.25rem;
-        font-size: 1rem;
-        padding: 0.7rem 0.9rem;
-        border: none;
-        background: linear-gradient(45deg, #FF6B6B, #FF8E53);
-        color: black;
-    }
+        .search-bar button {
+            border-radius: 0.25rem;
+            font-size: 1rem;
+            padding: 0.7rem 0.9rem;
+            border: none;
+            background: linear-gradient(45deg, #FF6B6B, #FF8E53);
+            color: black;
+        }
 
 /* Pagination links */
 .pagination {
     display: flex;
-    justify-content: right;
+    justify-content: center;
 }
 
     .pagination a {
